# Generals-Web

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  README_WEB.md  SECURITY.md  SETUP.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: asset-guard.yml  valid-tags.txt  validate-pull-request.yml  web-build.yml
Core/: CMakeLists.txt
Core/GameEngine/Include/Common/: AsciiString.h  Debug.h  GameMemory.h  GameMemoryNull.h  INI.h  UnicodeString.h  crc.h
Core/GameEngine/Include/GameClient/: GameWindowTransitions.h
Core/GameEngine/Include/GameNetwork/: LANAPI.h
Core/GameEngine/Include/GameNetwork/WOLBrowser/: WebBrowser.h
Core/GameEngine/Source/Common/: FrameRateLimit.cpp  UserPreferences.cpp  WorkerProcess.cpp
Core/GameEngine/Source/Common/Audio/: GameAudio.cpp
Core/GameEngine/Source/Common/INI/: INI.cpp
Core/GameEngine/Source/Common/System/: Debug.cpp  FileSystem.cpp  GameMemory.cpp  GameMemoryInit.cpp  GameMemoryNull.cpp  LocalFile.cpp  RAMFile.cpp  StreamingArchiveFile.cpp  SubsystemInterface.cpp  UnicodeString.cpp
Core/GameEngine/Source/GameClient/: GameText.cpp  MapUtil.cpp
Core/GameEngine/Source/GameClient/GUI/: GameWindowTransitions.cpp  IMEManager.cpp  WindowLayout.cpp
Core/GameEngine/Source/GameNetwork/: IPEnumeration.cpp  Transport.cpp  udp.cpp
Core/GameEngine/Source/GameNetwork/GameSpy/Thread/: GameResultsThread.cpp  PingThread.cpp
Core/GameEngine/Source/GameNetwork/WOLBrowser/: WebBrowser.cpp
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/GameEngineDevice/Source/StdDevice/Common/: StdBIGFileSystem.cpp  StdLocalFileSystem.cpp
Core/GameEngineDevice/Source/W3DDevice/GameClient/: BaseHeightMap.cpp  W3DView.cpp  WorldHeightMap.cpp
Core/GameEngineDevice/Source/W3DDevice/GameClient/Water/: W3DWater.cpp
Core/GameEngineDevice/Source/Win32Device/Common/: Win32BIGFileSystem.cpp  Win32LocalFileSystem.cpp
Core/Libraries/Source/WWVegas/WW3D2/: FramGrab.cpp  agg_def.h  dx8polygonrenderer.h  dx8webbrowser.h  framgrab.h  proto.cpp  render2dsentence.cpp  surfaceclass.cpp  texture.cpp  textureloader.cpp  textureloader.h  texturethumbnail.cpp
Core/Libraries/Source/WWVegas/WWAudio/: Threads.cpp  Threads.h  Utils.h
Core/Libraries/Source/WWVegas/WWDebug/: wwdebug.cpp  wwmemlog.cpp  wwprofile.cpp  wwprofile.h
Core/Libraries/Source/WWVegas/WWDownload/: Download.cpp  FTP.cpp  ftp.h  registry.cpp
Core/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt  DbgHelpGuard.cpp  DbgHelpLoader.cpp  DbgHelpLoader.h  SystemAllocator.h  always.h  bittype.h  cpudetect.cpp  hashtemplate.h  ini.cpp  osdep.h  stringex.h  wwstring.cpp  wwstring.h
Core/Libraries/Source/WWVegas/WWLib/osdep/: osdep.h
Core/Libraries/Source/WWVegas/WWMath/: wwmath.h
Core/Libraries/Source/WWVegas/WWSaveLoad/: saveload.cpp
Core/Libraries/Source/WebAudioBridge/: web_audio_bridge.cpp
Core/Libraries/Source/debug/: CMakeLists.txt  debug_cmd.cpp  debug_debug.cpp  debug_debug.h  debug_except.cpp  debug_internal.cpp  debug_io_con.cpp  debug_io_flat.cpp  debug_io_net.cpp  debug_io_ods.cpp  debug_stack.cpp
Core/Libraries/Source/profile/: CMakeLists.txt  internal.h  internal_funclevel.h  profile.cpp  profile.h  profile_funclevel.cpp  profile_funclevel.h  profile_highlevel.cpp  profile_highlevel.h
Core/Tools/MapCacheBuilder/Source/: WinMain.cpp
Core/Tools/WW3D/pluglib/: wwmath.h
Dependencies/Utility/: CMakeLists.txt
Dependencies/Utility/Utility/: endian_compat.h  gx_trace.h  string_compat.h  time_compat.h
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/Include/Common/: BezierSegment.h  DataChunk.h  MapReaderWriterInfo.h
Generals/Code/GameEngine/Include/Precompiled/: PreRTS.h
Generals/Code/GameEngine/Source/Common/: CommandLine.cpp  GameEngine.cpp  GlobalData.cpp
Generals/Code/GameEngine/Source/Common/Bezier/: BezFwdIterator.cpp  BezierSegment.cpp
Generals/Code/GameEngine/Source/Common/System/: StackDump.cpp  registry.cpp
Generals/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp
Generals/Code/GameEngineDevice/Include/Win32Device/Common/: Win32GameEngine.h
Generals/Code/GameEngineDevice/Source/W3DDevice/GameClient/: W3DDisplay.cpp  W3DFileSystem.cpp  W3DWebBrowser.cpp
Generals/Code/GameEngineDevice/Source/Win32Device/Common/: Win32OSDisplay.cpp
Generals/Code/Libraries/Source/WWVegas/WW3D2/: dx8wrapper.cpp  meshmdlio.cpp  w3d_file.h
Generals/Code/Main/: CMakeLists.txt
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/Common/: CriticalSection.h  DataChunk.h  MapReaderWriterInfo.h  Recorder.h
GeneralsMD/Code/GameEngine/Include/Precompiled/: PreRTS.h
GeneralsMD/Code/GameEngine/Source/Common/: CommandLine.cpp  GameEngine.cpp  GameMain.cpp  GlobalData.cpp
GeneralsMD/Code/GameEngine/Source/Common/RTS/: Player.cpp
GeneralsMD/Code/GameEngine/Source/Common/System/: DataChunk.cpp  StackDump.cpp  registry.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/: InGameUI.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/: GameWindowManager.cpp  GameWindowManagerScript.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/MessageStream/: LookAtXlat.cpp
GeneralsMD/Code/Main/: CMakeLists.txt  EmscriptenInput.cpp  EmscriptenInput.h  EmscriptenMain.cpp  LinuxStubs.cpp  WinMain.cpp  closure-externs-gx.js  web_shell.html
cmake/: bink.cmake  config-memory.cmake  gamespy.cmake  miles.cmake  patch-miles-waveformat.cmake  web.cmake
docs/web-port/: ARCHITECTURE.md  BUGS_AND_FIXES.md  BUILD_INSTRUCTIONS.md  GOOD-FIRST-ISSUES.md  HANDOFF-2026-07-07.md  PORTING_LOG.md  PORT_TODO.md  POSTMORTEM-2026-07-07-gc-crash.md  README.md  RENDERING_STATUS.md
scripts/: link_mac.sh  play-web.sh  serve.py
scripts/dev/: actions_auto.json  actions_match.json  gx_harness.py
scripts/legacy/: compile_dx8wrapper.sh  compile_targeted.sh
webport/: BUILD_INSTRUCTIONS.md  RENDERING_STATUS.md  bugs-and-fixes.md  compile_dx8wrapper.sh  compile_targeted.sh  link_mac.sh  port-todo.md  porting-log.md
(+63 files in other folders)
